# tsl

./: .gitignore  .gitmodules  README.md  books.js  books.ts  func.js  func.ts  math.js  math.ts  util.js  util.ts  visual.js  visual.ts  wasm_api.js  wasm_api.ts
.github/workflows/: wasm-build.yml
lang/: string.js  string.ts
math/: group.js  group.ts  latex.js  latex.ts  math.js  math.ts  matrix.js  matrix.ts  monoid.js  monoid.ts  number.js  number.ts  polynomial.js  polynomial.ts  semigroup.js  semigroup.ts  set.js  set.ts
test/: group.test.ts  matrix.test.ts  number.test.ts  polynomial.test.ts  results.json  set.test.ts  string.test.ts  wasm.test.ts
wasm/: .clangd  CMakeLists.txt  build.sh  format.sh  test_build.sh
wasm/gtest/: big_int_test_gtest.cpp  big_rational_test_gtest.cpp  complex_qi_test_gtest.cpp  complex_test_gtest.cpp  game_of_life_test_gtest.cpp  graph_distances_test_gtest.cpp  graph_generators_test_gtest.cpp  graph_metric_dimension_test_gtest.cpp  graph_test_gtest.cpp  lang_string_test_gtest.cpp  linear_recurrence_test_gtest.cpp  matrix_test_gtest.cpp  polynomial_test_gtest.cpp  rational_function_test_gtest.cpp  rational_test_gtest.cpp  semigroup_test_gtest.cpp  set_utils_test_gtest.cpp
wasm/src/: bars_game.cpp  bars_game.h  big_int.cpp  big_int.h  comb.cpp  comb.h  complex.h  coordinate.h  game_of_life.cpp  game_of_life.h  general_linear_group.cpp  general_linear_group.h  lang_string.cpp  lang_string.h  linear_recurrence.cpp  linear_recurrence.h  main.cpp  matrix.h  minus.cpp  minus.h  modular_number.cpp  modular_number.h  polynomial.h  rational.h  rational_function.h  semigroup.h  sequence_ops.h  set_utils.h  topology.h
wasm/src/apps/bars_game/: bars_game.h  exports.cpp
wasm/src/apps/gol/: exports.cpp  game_of_life.h
wasm/src/core/algebra/: general_linear_group.h  linear_recurrence.h  matrix.h  rational_function.h  semigroup.h
wasm/src/core/combinatorics/: comb.cpp  comb.h
wasm/src/core/graph/: graph.h  graph_distances.h  graph_generators.h  graph_utils.h
wasm/src/core/number/: big_int.h  complex.h  rational.h
wasm/src/core/string/: lang_string.h
wasm/src/core/topology/: topology.h
wasm/src/core/util/: helper.h  scoped_timer.h  small_vector.h
wasm/src/graph/: graph_distances.h  graph_generators.h  metric_dimension.h
wasm/src/modules/graph/: exports.cpp
wasm/src/modules/linear_recur/: exports.cpp
wasm/src/modules/matrix/: exports.cpp
wasm/src/modules/sequences/: exports.cpp
wasm/ts/: wasm_api_bars_game.ts  wasm_api_game_of_life.ts  wasm_api_gl_matrix.ts  wasm_api_graph_demo.ts  wasm_api_linear_recur.ts  wasm_api_number_of_sequences.ts  wasm_loader.ts  wasm_out_ci.d.ts  wasm_types.ts
